@@ -4,7 +4,7 @@ mypath = py.path.local(__file__).new(ext=".py")
 def test_forwarding_to_warnings_module():
     py.test.deprecated_call(py.log._apiwarn, "1.3", "..")
 
-def test_apiwarn_functional():
+def test_apiwarn_functional(recwarn):
     capture = py.io.StdCapture()
     py.log._apiwarn("x.y.z", "something", stacklevel=1)
     out, err = capture.reset()
@@ -15,7 +15,7 @@ def test_apiwarn_functional():
     exp = "%s:%s" % (mypath, lno)
     assert err.find(exp) != -1
 
-def test_stacklevel():
+def test_stacklevel(recwarn):
     def f():
         py.log._apiwarn("x", "some", stacklevel=2)
     # 3
@@ -27,7 +27,7 @@ def test_stacklevel():
     warning = str(err)
     assert warning.find(":%s" % lno) != -1
 
-def test_stacklevel_initpkg_with_resolve(testdir):
+def test_stacklevel_initpkg_with_resolve(testdir, recwarn):
     testdir.makepyfile(modabc="""
         import py
         def f():
@@ -49,7 +49,7 @@ def test_stacklevel_initpkg_with_resolve(testdir):
     loc = 'test_stacklevel_initpkg_with_resolve.py:2'
     assert warning.find(loc) != -1
 
-def test_stacklevel_initpkg_no_resolve():
+def test_stacklevel_initpkg_no_resolve(recwarn):
     def f():
         py.log._apiwarn("x", "some", stacklevel="apipkg")
     capture = py.io.StdCapture()
@@ -60,7 +60,7 @@ def test_stacklevel_initpkg_no_resolve():
     assert warning.find(":%s" % lno) != -1
 
 
-def test_function():
+def test_function(recwarn):
     capture = py.io.StdCapture()
     py.log._apiwarn("x.y.z", "something", function=test_function)
     out, err = capture.reset()
