@@ -1,7 +1,7 @@
 import py
 from py._plugin.pytest_recwarn import WarningsRecorder
 
-def test_WarningRecorder():
+def test_WarningRecorder(recwarn):
     showwarning = py.std.warnings.showwarning
     rec = WarningsRecorder()
     assert py.std.warnings.showwarning != showwarning
