@@ -3,6 +3,9 @@ changedir=testing
 commands=
   py.test --confcutdir=..  -rfsxX --junitxml=junit-{envname}.xml --tools-on-path []
 deps=pexpect
+[testenv:py27]
+distribute=True
+basepython=python2.7
 [testenv:py26]
 basepython=python2.6
 [testenv:doc]
